# teeffs

./: .gitignore  Cargo.toml  LICENSE.md
crates/teeffs-algo/: Cargo.toml
crates/teeffs-core/: Cargo.toml
crates/teeffs-core/src/: error.rs
crates/teeffs-deform/: Cargo.toml
crates/teeffs-export/: Cargo.toml
crates/teeffs-grid/: Cargo.toml
crates/teeffs-grid/src/: error.rs
crates/teeffs-mesh/: Cargo.toml
crates/teeffs-voronoi/: Cargo.toml
docs/articles/grids/: index.md
src/Sylves/Grid/Mesh/: EdgeStore.cs  MeshGridBuilder.cs  PlanarLazyMeshGrid.cs
src/Sylves/Grid/PeriodicPlanarMeshGrid/: PeriodicPlanarMeshGrid.cs
teeffs/: Cargo.toml
teeffs/src/: lib.rs
