[package]
name                  = "teeffs-algo"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
description.workspace = true

[dependencies]
teeffs-core = { path = "../teeffs-core", version = "0.1.0" }
teeffs-grid = { path = "../teeffs-grid", version = "0.1.0" }
