[package]
name                  = "teeffs-deform"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
description.workspace = true

[dependencies]
teeffs-core = { path = "../teeffs-core", version = "0.1.0" }
teeffs-mesh = { path = "../teeffs-mesh", version = "0.1.0" }
